[package]
name = "friend-finder-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
shuttle-runtime = { version = "0.53.0", default-features = false }
shuttle-axum = "0.53.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jiff = "0.2.5"
